crates/capsec/tests/compile_fail/cap_is_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
 --> tests/compile_fail/cap_is_not_send.rs:8:19
  |
8 |     assert_send::<Cap<FsRead>>();
  |                   ^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
  |
  = help: within `capsec::Cap<capsec::FsRead>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
note: required because it appears within the type `capsec::Cap<capsec::FsRead>`
 --> $WORKSPACE/crates/capsec-core/src/cap.rs
  |
  | pub struct Cap<P: Permission> {
  |            ^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/cap_is_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`
